new dependency version was added